[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/hud/HUD.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ToppingUp" type="Label" parent="."]
margin_left = 393.0
margin_top = 198.0
margin_right = 433.0
margin_bottom = 212.0
text = "Peps"
align = 1

[node name="TopBack" type="Label" parent="."]
margin_left = 400.0
margin_top = 190.0
margin_right = 440.0
margin_bottom = 204.0
custom_colors/font_color = Color( 1, 1, 1, 0.184314 )
text = "Cook"
align = 1

[node name="ToppingLeft" type="Label" parent="."]
margin_left = 335.0
margin_top = 228.0
margin_right = 375.0
margin_bottom = 242.0
text = "Peps"
align = 1

[node name="LeftBack" type="Label" parent="."]
margin_left = 350.0
margin_top = 222.0
margin_right = 390.0
margin_bottom = 236.0
custom_colors/font_color = Color( 1, 1, 1, 0.184314 )
text = "Cook"
align = 1

[node name="ToppingDown" type="Label" parent="."]
margin_left = 387.0
margin_top = 257.0
margin_right = 427.0
margin_bottom = 271.0
text = "Peps"
align = 1

[node name="DownBack" type="Label" parent="."]
margin_left = 398.0
margin_top = 250.0
margin_right = 438.0
margin_bottom = 264.0
custom_colors/font_color = Color( 1, 1, 1, 0.184314 )
text = "Cook"
align = 1

[node name="ToppingRight" type="Label" parent="."]
margin_left = 439.0
margin_top = 226.0
margin_right = 479.0
margin_bottom = 240.0
text = "Peps"
align = 1

[node name="RightBack" type="Label" parent="."]
margin_left = 452.0
margin_top = 220.0
margin_right = 492.0
margin_bottom = 234.0
custom_colors/font_color = Color( 1, 1, 1, 0.184314 )
text = "Cook"
align = 1

[node name="Order" type="Label" parent="."]
margin_left = 18.0
margin_top = 245.0
margin_right = 153.0
margin_bottom = 277.0
text = "This
Is a test"

[node name="Bottom" type="Label" parent="."]
margin_left = 193.0
margin_top = 268.0
margin_right = 233.0
margin_bottom = 282.0
text = "Cook"
align = 1

[node name="BottomBack" type="Label" parent="."]
margin_left = 210.0
margin_top = 263.0
margin_right = 250.0
margin_bottom = 277.0
custom_colors/font_color = Color( 1, 1, 1, 0.184314 )
text = "Cook"
align = 1
